# GROUNDED

./: .env.example  .gitignore  README.md  SETUP.md  everything done until now.md  publish.py  pyproject.toml
db/: schema.sql
docs/: README.md  progress.md
grounded/: cli.py  config.py  db.py  models.py
grounded/agents/: __init__.py  __main__.py  cleaning.py  context.py  crew.py  debate.py  deduper.py  edition.py  editor.py  fact_extractor.py  llm.py  loader.py  perspective.py  reporter.py  router.py  runner.py  schemas.py  store.py  verifier.py
grounded/ingest/: __init__.py  _http.py  _rss.py  base.py  google_news.py  rss.py  sources.py
grounded/pipeline/: clustering.py  embed.py  importance.py  scrape.py
infra/: docker-compose.yml
output/: edition-2026-07-22.md  edition-2026-07-23.md
tests/: conftest.py  test_agents_cleaning.py  test_agents_crew.py  test_agents_db.py  test_agents_debate.py  test_agents_edition.py  test_agents_editor.py  test_agents_fact_extractor.py  test_agents_llm.py  test_agents_router.py  test_agents_verifier.py  test_clustering.py  test_embed.py  test_importance.py  test_pipeline_db.py
