[project]
name = "grounded"
version = "0.1.0"
description = "Autonomous fact-driven news pipeline for India"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "feedparser>=6.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "numpy>=1.26",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "voyageai>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
grounded = "grounded.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grounded"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Postgres (deselect with '-m \"not integration\"').",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
